<resources>
	<string name="app_name">UNICEF Kid Power Program</string>
	<string name="ble_not_supported">BLE is not supported</string>
	<string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
	<string name="signup_title">Sign Up</string>
	<string name="teams_title">My Teams</string>
	<string name="teamsetup_title">Your Team</string>
	<string name="profile_title">Profile</string>
	<string name="coachsettings_title">Coach Settings</string>
	<string name="zero_string">0</string>
	<string name="welcome_title">
		Welcome to the UNICEF Kid Power\nProgram!
    </string>
	<string name="welcome_description">
        Congratulations again on being selected to join the UNICEF Kid Power Team this year - we\'re
        excited to have you!\nLet\'s set up your account to get your team ready to get active and
        save lives. The first four steps will take about 5 minutes to complete.
    </string>
	<string name="get_started">Get Started</string>
	<string name="label_alreadyhaveanaccount">Already have an account?</string>
	<string name="log_in">Log in</string>
	<string name="sign_in">Sign in</string>
	<string name="log_in_underlined"><u>Log in</u></string>
	<string name="email_address">email address</string>
	<string name="password">password</string>
	<string name="trouble_logging_in_underlined"><u>Trouble logging in?</u></string>
	<string name="password_reset">Password Reset</string>
	<string name="i_remember_now_underlined"><u>I remember now!</u></string>
	<string name="password_incorrect">This password is incorrect. Please try again</string>
	<string name="packets">Packets</string>
	<string name="steps">Steps</string>
	<string name="average_steps_per_day">Steps</string>
	<string name="you_are_off_to_a_great_start">You\'re off to a great start!</string>
	<string name="kids">Kids</string>
	<string name="kids_number">Kids (%d)</string>
	<string name="new_kid_title">New Kid</string>
	<string name="new_kid">New Kid</string>
	<string name="new_kid_note">
		Note: Don\'t create a new profile if you just need to replace a Band.
		Instead, unlink the Band, then link a new one.
    </string>
	<string name="team_name">team name</string>
	<string name="grade">grade</string>
	<string name="third_grade">3rd Grade</string>
	<string name="forth_grade">4th Grade</string>
	<string name="fifth_grade">5th Grade</string>
	<string name="sixth_grade">6th Grade</string>
	<string name="seventh_grade">7th Grade</string>
	<string name="eighth_grade">8th Grade</string>
	<string name="create_team">Create Team</string>
	<string name="new_team">New Team</string>
	<string name="settings_with_icon">&#xf013; Settings</string>
	<string name="other">Other</string>
	<string name="favorite_title">Favorite</string>
	<string name="nearby_title">Nearby</string>
	<string name="not_linked">Tap to type ID</string>
	<string name="scanning">Scanning...</string>
	<string name="link_band">Link Band</string>
	<string name="sync">Sync</string>
	<string name="enter_your_teachers_password_to_unlock">Enter your Coach password to unlock.\n(This is the same password you use to sign in to the app.)</string>
	<string name="save_confirm_caption">You have unsaved changes.</string>
	<string name="delete_student_confirm_caption"> Are you sure you want to delete?</string>
	<string name="unlock">Unlock</string>
	<string name="label_itseasysingupsteps">It\'s quick and easy</string>
	<string name="btncreatemyprofile_title">Create My Profile</string>
	<string name="label_nicework">Nice work!</string>
	<string name="label_nicework_description">Your coach profile is complete</string>
	<string name="btnsetupteam_title">Set up my team</string>
	<string name="btnnext_title">Next</string>
	<string name="sidebar_new_team">NEW TEAM</string>
	<string name="sidebar_curriculum">CURRICULUM</string>
	<string name="sidebar_inbox">INBOX</string>
	<string name="sidebar_support">SUPPORT</string>
	<string name="sidebar_account">ACCOUNT</string>
	<string name="sidebar_logout">LOG OUT</string>
	<string name="coach_string">COACH</string>
	<string name="band_id_string">BAND ID</string>
	<string name="band_id_lower_string">Band ID</string>
	<string name="studentsync_title_progress">Sync in progress</string>
	<string name="studentsync_see_my_progress">SEE MY PROGRESS</string>
	<string name="error_network">Connection error</string>
	<string name="error_parse_response">Error parsing response</string>
	<string name="error_unexpected">Unexpected</string>
	<string name="error_unknown">Unknown error</string>
	<string name="error_server">Server error</string>
	<string name="addpowerpoints_hintfor_choose_team">1. Which team do you want to award Power Points to?</string>
	<string name="addpowerpoints_hintfor_choose_kind">2. Award to each member of the team, or one team member?</string>
	<string name="addpowerpoints_hintfor_choose_student">3. Which team member?</string>
	<string name="addpowerpoints_hintfor_choose_powerpoint">How many Power Points?</string>
	<string name="addpowerpoints_kind_toteam">...to all members on the Team</string>
	<string name="addpowerpoints_kind_toindividual">...to an individual team member</string>
	<string name="coachpassworddlg_check_password">Please check your password</string>
	<string name="app_powerpoint">Power Point</string>
	<string name="app_powerpoints">Power Points</string>
	<string name="app_points">Points</string>
	<string name="app_onemoment">One moment…</string>
	<string name="app_connecting">Connecting…</string>
	<string name="coachsettings_progress_loadingteam">Loading team…</string>
	<string name="coachsettings_format_for_teamcount">Coaching %d team(s)</string>
	<string name="coachsettings_select_team">Please select a team first</string>
	<string name="coachsettings_no_teams">There are no teams</string>
	<string name="coachsettings_username_updated">User name updated</string>
	<string name="coachsettings_username_update_failed">User name update failed</string>
	<string name="coachsettings_useremail_updated">User email updated</string>
	<string name="coachsettings_useremail_update_failed">Could not update user email</string>
	<string name="coachsettings_userpassword_create_failed">Could not create password</string>
	<string name="coachsettings_user_profile_update_failed">Could not update your profile</string>
	<string name="coachsettings_getteams_failed">Could not get teams, Please check your network and try again.</string>
	<string name="coachsettings_newteam_added">New team added</string>
	<string name="coachsettings_newteam_added_failed">Could not add new team</string>
	<string name="coachsettings_no_students">This team does not have any members</string>
	<string name="coachsettings_fetch_students_failed">Could not fetch students</string>
	<string name="coachsettings_added_powerpoints">Power points added successfully</string>
	<string name="coachsettings_add_powerpoints_failed">Could not add power points</string>
	<string name="coachsettings_select_grade">Please select grade</string>
	<string name="coachsettings_email_required">Email address is required</string>
	<string name="coachsettings_invalid_email">Invalid email address</string>
	<string name="coachsettings_email_not_match">Email addresses do not match</string>
	<string name="coachsettings_nothing_updated">Nothing to update</string>
	<string name="coachsettings_firstname_required">First name is required</string>
	<string name="coachsettings_lastname_required">Last name is required</string>
	<string name="coachsettings_adding_powerpoints">Adding Power Points…</string>
	<string name="profile_student_notfound">Student not found</string>
	<string name="app_yesterday">yesterday</string>
	<string name="profile_getstudent_failed">Could not get student</string>
	<string name="profile_delete_failed">Could not delete the student</string>
	<string name="profile_name_required">Name is required</string>
	<string name="profile_name_max_length">Username can only be 12 symbols long.</string>
	<string name="profile_update_failed">Update failed</string>
	<string name="app_school">School</string>
	<string name="selcity_select_city">Please select your city first</string>
	<string name="selcity_cityhasno_activeschools">This city has no active schools</string>
	<string name="selcity_select_yourcity">Please select your city</string>
	<string name="selcity_select_yourschool">Please select your school</string>
	<string name="selectphoto_cannot_take">Cannot take a photo</string>
	<string name="selectphoto_loadimage_failed">Loading image failed</string>
	<string name="selectphoto_takephoto_failed">Taking photo failed</string>
	<string name="selectphoto_saveimage_failed">Image saving failed</string>
	<string name="selectphoto_title_selectpicture">Select Picture</string>
	<string name="signup_enter_bandid">Please enter a Kid Power Band ID</string>
	<string name="signup_create_userfirst">Please create a user first</string>
	<string name="signup_create_teamfirst">Please create a team first</string>
	<string name="signup_creating_student">Creating a student…</string>
	<string name="signup_creating_team">Creating your team…</string>
	<string name="app_go">Go</string>
	<string name="signup_user_not_registered">User not registered by regCode api</string>
	<string name="signup_correct_invalid_fields">Please correct invalid fields</string>
	<string name="signup_creating_profile">Creating your profile…</string>
	<string name="signup_createprofile_failed">Failed to create profile</string>
	<string name="signup_registerband_failed">Could not register Band</string>
	<string name="signup_createstudent_succed">The student has successfully been created!</string>
	<string name="signup_createstudent_failed">Creating a student failed</string>
	<string name="signup_createteam_failed">Creating a team failed</string>
	<string name="signup_band_already_claimed">That Power Band is already claimed. Please try another.</string>
	<string name="signup_bandid_not_found">The entered device ID could not be found.</string>
	<string name="teamsetup_createteam_failed">Could not create team</string>
	<string name="teamsetup_register_userfirst">Please register a user first</string>
	<string name="teamsetup_settingup_team">Setting up your team…</string>
	<string name="teams_loading_team">Loading your team(s)…</string>
	<string name="teams_loadingteam_failed">Could not load teams</string>
	<string name="teamstats_rank_first">1st</string>
	<string name="teamstats_rank_second">2nd</string>
	<string name="teamstats_rank_third">3rd</string>
	<string name="teamstats_format_rank">%dth</string>
	<string name="teamstats_load_teaminfo_failed">Could not load team info</string>
	<string name="teamstats_loading_team">Loading team…</string>
	<string name="teamstats_teaminfo_updated">Team info updated</string>
	<string name="teamstats_teaminfo_update_failed">Could not update team info</string>
	<string name="layout_bandregistering_updatename">updating name…</string>
	<string name="band_linking">Linking band…</string>
	<string name="icon_string_link">&#xf01e;</string>
	<string name="button_icon_cancel">CANCEL</string>
	<string name="button_continue">Continue</string>
	<string name="verify_identity">Verify your Identity</string>
	<string name="verify_identity_description">We sent a text message to the mobile phone you entered on your application. Please enter that code here to verify your identity.</string>
	<string name="five_digit_code_hint">5-digit code</string>
	<string name="verify_identity_disclaimer">Please allow up to 2 minutes for the code to arrive. If you did not include a mobile number in your application, the security code will arrive in your email inbox.</string>
	<string name="verify_identity_disclaimer_2">If it hasn\'t arrived within 2 minutes, you can resend it, or have it emailed instead.</string>
	<string name="create_team_description">What would you like your team name to be? Go ahead and be creative!</string>
	<string name="layout_navigation_back">back</string>
</resources>