<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:segmentedgroup="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_parent"
    android:background="@color/kidpower_background"
    android:padding="25dp">

    <org.unicefkidpower.schools.ui.KPEditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_button_height"
        android:id="@+id/edit_team_name"
        style="@style/style_edittext_general"
		android:textColor="@color/kidpower_brownish_grey"
        android:hint="@string/team_name"
        android:singleLine="true"
        android:inputType="textCapSentences" />

    <org.unicefkidpower.schools.ui.SegmentedGroup
		android:id="@+id/segmented_grades"
		android:layout_width="match_parent"
		android:layout_height="@dimen/dimen_button_height"
		android:layout_marginTop="@dimen/margin_16"
		android:orientation="horizontal"
		segmentedgroup:sc_border_radius="@dimen/dimen_margin_5"
		segmentedgroup:sc_border_width="@dimen/dimen_margin_1"
		app:sc_tint_color="@color/kidpower_light_blue"
		app:sc_stroke_color="@color/kidpower_light_blue"
		app:sc_unchecked_text_color="@color/kidpower_warm_grey"
		>

        <org.unicefkidpower.schools.ui.KPRadioButton
			android:id="@+id/radio_third"
			style="@style/kidpower_style_radiobutton_general"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:button="@null"
			android:checked="true"
			android:gravity="center"
			android:text="@string/third_grade"
			android:textColor="@android:color/white"
			/>

        <org.unicefkidpower.schools.ui.KPRadioButton
			android:id="@+id/radio_forth"
			style="@style/kidpower_style_radiobutton_general"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:button="@null"
			android:checked="false"
			android:gravity="center"
			android:text="@string/forth_grade"
			android:textColor="@android:color/white"
			/>

        <org.unicefkidpower.schools.ui.KPRadioButton
			android:id="@+id/radio_fifth"
			style="@style/kidpower_style_radiobutton_general"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:button="@null"
			android:checked="false"
			android:gravity="center"
			android:text="@string/fifth_grade"
			android:textColor="@android:color/white"
			/>

		<org.unicefkidpower.schools.ui.KPRadioButton
			android:id="@+id/radio_sixth"
			style="@style/kidpower_style_radiobutton_general"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:button="@null"
			android:checked="false"
			android:gravity="center"
			android:text="@string/sixth_grade"
			android:textColor="@android:color/white"
			/>

		<org.unicefkidpower.schools.ui.KPRadioButton
			android:id="@+id/radio_seventh"
			style="@style/kidpower_style_radiobutton_general"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:button="@null"
			android:checked="false"
			android:gravity="center"
			android:text="@string/seventh_grade"
			android:textColor="@android:color/white"
			android:visibility="gone"/>

		<org.unicefkidpower.schools.ui.KPRadioButton
			android:id="@+id/radio_eighth"
			style="@style/kidpower_style_radiobutton_general"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:button="@null"
			android:checked="false"
			android:gravity="center"
			android:text="@string/eighth_grade"
			android:textColor="@android:color/white"
			android:visibility="gone"/>

		<org.unicefkidpower.schools.ui.KPRadioButton
			android:id="@+id/radio_other"
			style="@style/kidpower_style_radiobutton_general"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:button="@null"
			android:checked="false"
			android:gravity="center"
			android:text="@string/other"
			android:textColor="@android:color/white"
			/>
	</org.unicefkidpower.schools.ui.SegmentedGroup>

    <org.unicefkidpower.schools.ui.KPEditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_button_height"
        style="@style/style_edittext_general"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/edit_team_grade"
        android:hint="@string/grade"
		android:textColor="@color/kidpower_brownish_grey"
        android:singleLine="true"
        android:layout_marginTop="@dimen/margin_16"
        android:visibility="gone" />

    <org.unicefkidpower.schools.ui.KPImageTextButton
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_button_height"
        android:id="@+id/btn_create_team"
        android:layout_marginTop="@dimen/margin_16"
        app:customText="@string/create_team"
        app:customTextSize="16dp"
        app:customImageResourceId="@drawable/icon_team_active"
        android:background="@color/kidpower_light_blue"
        android:paddingLeft="@dimen/kidpower_inputboxpadding"
        android:paddingRight="@dimen/kidpower_inputboxpadding"
        android:layout_gravity="right" />

</LinearLayout>