<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/kidpower_background"
    android:padding="30dp"
    android:id="@+id/layout_root">

    <org.unicefkidpower.schools.ui.KPTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_verify_identity"
        style="@style/style_textview_heading"
        android:text="@string/verify_identity"
        android:gravity="center"
        android:textSize="19dp"
        android:layout_marginTop="30dp"
        android:layout_above="@+id/txt_verify_identity_description" />

    <org.unicefkidpower.schools.ui.KPTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/verify_identity_disclaimer_second"
        style="@style/style_textview_general"
        android:text="@string/verify_identity_disclaimer_2"
        android:layout_gravity="start"
        android:textSize="13dp"
        android:layout_marginTop="20dp"
        android:layout_above="@+id/layout_bottom" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:gravity="center"
        android:id="@+id/layout_logo"
        android:layout_above="@+id/txt_verify_identity">

        <org.unicefkidpower.schools.ui.KPResizableImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/iv_logo"
            android:scaleType="fitCenter"
            android:src="@drawable/kp_logo"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_bottom"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:weightSum="2"
        android:layout_alignParentBottom="true">

        <org.unicefkidpower.schools.ui.KPButton
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_button_height"
            android:text="@string/layout_navigation_back"
            android:id="@+id/btn_back"
            style="@style/kidpower_secondarytext"
            app:customButtonFont="@string/font_mikado_bold"
            android:textAllCaps="true"
            android:textSize="14dp"
            android:background="@color/kidpower_light_gray"
            android:layout_weight="1" />

        <org.unicefkidpower.schools.ui.KPButton
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_button_height"
            android:text="@string/button_continue"
            android:id="@+id/btn_continue"
            style="@style/style_button_general"
            app:customButtonFont="@string/font_mikado_bold"
            android:textAllCaps="true"
            android:textSize="14dp"
            android:background="@color/kidpower_light_blue"
            android:layout_weight="1"
            android:layout_marginLeft="60dp" />
    </LinearLayout>

    <org.unicefkidpower.schools.ui.KPEditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_button_height"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/edit_verify_code"
        android:layout_marginTop="60dp"
        android:hint="@string/five_digit_code_hint"
        android:textSize="13dp"
        android:textColor="@color/kidpower_brownish_grey"
        style="@style/style_edittext_general"
        android:layout_above="@+id/verify_identity_disclaimer" />

    <org.unicefkidpower.schools.ui.KPTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_verify_identity_description"
        style="@style/style_textview_general"
        android:text="@string/verify_identity_description"
        android:gravity="center"
        android:textSize="13dp"
        android:layout_marginTop="25dp"
        android:layout_above="@+id/edit_verify_code" />

    <org.unicefkidpower.schools.ui.KPTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/verify_identity_disclaimer"
        style="@style/style_textview_general"
        android:layout_gravity="start"
        android:text="@string/verify_identity_disclaimer"
        android:textSize="13dp"
        android:layout_marginTop="15dp"
        android:layout_above="@+id/verify_identity_disclaimer_second" />
</RelativeLayout>
